Reset OpenGL state derived from the previous frame

IIUC, there's no guarantee that the OpenGL context is "clean" state on
QQuickWindow::beforeRendering(). And series color could get wrong if
blend mode is unexpected, for example.

Fixes: QTBUG-100810
Change-Id: Iae1eb9025c8740c5e63e10d9339a266ce8e5d338
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
(cherry picked from commit 61011ff6c134f536c6c29f97daf1b26b51d63639)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>